# BlueMarble

./: CMakeLists.txt  Matrices.cpp  Vectors.cpp  main.cpp
shaders/: triangle_frag.glsl  triangle_vert.glsl
